--- a/catppuccin-macchiato.css
+++ b/catppuccin-macchiato.css
@@ -17,7 +17,7 @@
     --lavender: #b7bdf8;
     --rosewater: #f4dbd6;
 
-    --font: monospace; /*"FiraCode Nerd Font Mono";*/
+    --font: "Iosevka Nerd Font";
 
     /* vimium theme uses colors: flamingo, peach, rosewater, green, blue, lavender */
     --tridactyl-fg: var(--fg);
